[gd_scene load_steps=7 format=3 uid="uid://tutrw7d55ivk"]

[ext_resource type="Script" path="res://scenes/ui/end_screen.gd" id="1_k1hpq"]
[ext_resource type="PackedScene" uid="uid://c82aj0ne4mk2h" path="res://scenes/ui/background_screen_animation_player.tscn" id="2_ue8jj"]
[ext_resource type="PackedScene" uid="uid://cyw62i70v77ky" path="res://scenes/component/random_audio_stream_player_component.tscn" id="3_uw1gf"]
[ext_resource type="PackedScene" uid="uid://dgbm06g85i5gl" path="res://scenes/ui/sound_button.tscn" id="3_ycuik"]
[ext_resource type="AudioStream" uid="uid://dmnqgqyb0agal" path="res://assets/audio/jingle/jingles_victory.ogg" id="4_mot32"]
[ext_resource type="AudioStream" uid="uid://c4nl7gli44ame" path="res://assets/audio/jingle/jingles_defeat.ogg" id="5_8kjor"]

[node name="EndScreen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_k1hpq")

[node name="BackgroundScreenAnimationPlayer" parent="." instance=ExtResource("2_ue8jj")]
root_node = NodePath("../ColorRect2")

[node name="ColorRect2" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.607843, 0.298039, 0.639216, 0.352941)

[node name="VictoryAudioStreamPlayerComponent" parent="." instance=ExtResource("3_uw1gf")]
stream = ExtResource("4_mot32")

[node name="DefeatAudioStreamPlayerComponent" parent="." instance=ExtResource("3_uw1gf")]
stream = ExtResource("5_8kjor")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="TitleLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"BlueOutlineLabel"
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_font_sizes/font_size = 32
text = "Victory"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DescriptionLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"BlueOutlineLabel"
text = "You survived!"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RestartButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("3_ycuik")]
unique_name_in_owner = true
layout_mode = 2
text = "Restart"

[node name="QuitButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("3_ycuik")]
unique_name_in_owner = true
layout_mode = 2
text = "Quit"
